# necio

./: Cargo.toml  LICENSE  README.md  main.necio  output.rs
crates/necio-analysis/: Cargo.toml
crates/necio-analysis/src/: lib.rs
crates/necio-cli/: Cargo.toml
crates/necio-cli/src/: main.rs
crates/necio-codegen/: Cargo.toml
crates/necio-codegen/src/: codegen.rs  lib.rs
crates/necio-parser/: Cargo.toml
crates/necio-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/necio-stdlib/: Cargo.toml
crates/necio-stdlib/src/: lib.rs
examples/: main.necio
src/: codegen.rs  lexer.rs  main.rs
